tests/tests2/58_function_redefinition.expect
58_function_redefinition.c:7: error: redefinition of 'f'
