tests/tests2/58_function_redefinition.c
int f(void)
{
    return 0;
}

int f(void)
{
    return 1;
}
